istio-work/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: NodePort  # Set service type to NodePort
  selector:
    istio: ingressgateway
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 32080  # NodePort for HTTP traffic
    - name: https
      port: 443
      targetPort: 443
      nodePort: 32443  # NodePort for HTTPS traffic
